@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Added support to write a null shape in a shape file. (#3277)
+
 - Apply ON_MISSING_DATA to zero-length WMS client calls (#2785, #3243)
 
 - PHP/Mapscript: added labelCacheMember object and mapObj::getLabel() method (#1794)
